# csc4103-fall-2024-lectures

./: .clang-format  CMakeLists.txt  README.md
refreshing_c/: CMakeLists.txt  README.md
refreshing_c/code/: arrays.c  compiling.c  malloc.c  pointers.c  strings.c  structs.c  syntax.c
