cmake_minimum_required(VERSION 3.19)

project(fall2024-csc4103-refreshing_c C)

add_executable(compiling code/compiling.c)
add_executable(syntax code/syntax.c)
add_executable(pointers code/pointers.c)
add_executable(arrays code/arrays.c)
add_executable(strings code/strings.c)
add_executable(malloc code/malloc.c)
add_executable(structs code/structs.c)
